# real-time-chat-system

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/client/include/client/: ChatClient.h  MessageHandler.h  UserInterface.h
src/common/: CMakeLists.txt
src/common/include/chat/: CommonIncludes.h  Protocol.h
src/server/: CMakeLists.txt  main.cpp
src/server/include/server/: ChatRoom.h  ChatServer.h  ChatSession.h
tests/: CMakeLists.txt  test_chat_room.cpp  test_chat_session.cpp  test_message_serialization.cpp  test_protocol.cpp
